[tool.poetry]
name = "enquiries"
version = "0.3.0pre"
description = "Ask simple questions - get simple answers"
authors = [
    "Peter Holloway <holloway.p.r@gmail.com>",
    "Rohit TP <tprohit9@gmail.com>"
]
license = "MPL-2.0"
readme = "README.rst"
keywords = ['cli', 'prompt', 'input']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"
]

[project.urls]
"Homepage" = "https://gitlab.com/facingBackwards/enquiries"
"Bug Tracker" = "https://gitlab.com/facingBackwards/enquiries/-/issues"
"GitHub" = "https://github.com/rohittp0/enquiries"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
curtsies = { git = "https://github.com/bpython/curtsies.git", branch = "switch-to-blessed" }

[tool.poetry.dev-dependencies]
ptpython = "^3.0.25"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry>=1.0.8"]
build-backend = "poetry.core.masonry.api"
